# pdvst3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compiling.md  xcodehack.txt
.github/scripts/: package.bat  package.sh
.github/workflows/: cmake.yml
source/: Pd_example.pd  config.txt  cross-helper.cpp  helloworldcids.h  helloworldcontroller.cpp  helloworldcontroller.h  helloworldentry.cpp  helloworldprocessor.cpp  parsefile.cpp  pdvst3_base_defines.h  pdvst3cids.h  pdvst3controller.cpp  pdvst3controller.h  pdvst3entry.cpp  pdvst3parsefile.cpp  pdvst3pluginfactory.cpp  pdvst3pluginfactory.h  pdvst3processor.cpp  pdvst3processor.h  pdvstTransfer.h  version.h
source/scheduler/: CMakeLists.txt  cross-helper.c  vstschedlib.c
